--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
     "name": "salesviewer",
     "version": "0.0.0",
-    "license": "MIT",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+        "lint": "ng lint"
     },
     "private": true,
     "dependencies": {
@@ -22,8 +19,8 @@
         "@angular/platform-browser-dynamic": "^4.2.4",
         "@angular/router": "^4.2.4",
         "core-js": "^2.4.1",
-        "devextreme": "^17.2.1-pre-17262",
-        "devextreme-angular": "^17.2.1-beta.1",
+        "devextreme": "^17.2.4",
+        "devextreme-angular": "^17.2.4",
         "rxjs": "^5.4.2",
         "zone.js": "^0.8.14"
     },
@@ -35,14 +32,6 @@
         "@types/jasminewd2": "~2.0.2",
         "@types/node": "~6.0.60",
         "codelyzer": "~3.2.0",
-        "jasmine-core": "~2.6.2",
-        "jasmine-spec-reporter": "~4.1.0",
-        "karma": "~1.7.0",
-        "karma-chrome-launcher": "~2.1.1",
-        "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
         "node-sass": "^4.5.3",
         "protractor": "~5.1.2",
         "ts-node": "~3.2.0",
