--- a/package.json
+++ b/package.json
@@ -3,40 +3,42 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --extract-css",
+        "start": "ng serve",
         "build": "ng build",
         "lint": "ng lint"
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^4.2.4",
-        "@angular/common": "^4.2.4",
-        "@angular/compiler": "^4.2.4",
-        "@angular/core": "^4.2.4",
-        "@angular/forms": "^4.2.4",
-        "@angular/http": "^4.2.4",
-        "@angular/platform-browser": "^4.2.4",
-        "@angular/platform-browser-dynamic": "^4.2.4",
-        "@angular/router": "^4.2.4",
+        "@angular/animations": "^6.1.0",
+        "@angular/common": "^6.1.0",
+        "@angular/compiler": "^6.1.0",
+        "@angular/core": "^6.1.0",
+        "@angular/forms": "^6.1.0",
+        "@angular/http": "^6.1.0",
+        "@angular/platform-browser": "^6.1.0",
+        "@angular/platform-browser-dynamic": "^6.1.0",
+        "@angular/router": "^6.1.0",
         "color": "^3.0.0",
-        "core-js": "^2.4.1",
-        "devextreme": "^17.2.6",
-        "devextreme-angular": "^17.2.6",
-        "rxjs": "^5.4.2",
-        "zone.js": "^0.8.14"
+        "core-js": "^2.5.4",
+        "devextreme": "~18.2.3",
+        "devextreme-angular": "~18.2.3",
+        "rxjs": "~6.2.0",
+        "rxjs-compat": "^6.3.3",
+        "zone.js": "~0.8.26"
     },
     "devDependencies": {
-        "@angular/cli": "1.4.4",
-        "@angular/compiler-cli": "^4.2.4",
-        "@angular/language-service": "^4.2.4",
-        "@types/jasmine": "~2.5.53",
-        "@types/jasminewd2": "~2.0.2",
-        "@types/node": "~6.0.60",
-        "codelyzer": "~3.2.0",
+        "@angular-devkit/build-angular": "~0.8.0",
+        "@angular/cli": "~6.2.4",
+        "@angular/compiler-cli": "^6.1.0",
+        "@angular/language-service": "^6.1.0",
+        "@types/jasmine": "~2.8.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "codelyzer": "~4.3.0",
         "node-sass": "^4.5.3",
-        "protractor": "~5.1.2",
-        "ts-node": "~3.2.0",
-        "tslint": "~5.7.0",
-        "typescript": "~2.3.3"
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.11.0",
+        "typescript": "~2.9.2"
     }
 }
