--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
         "lib": [
             "es2017",
             "dom"
-        ]
+        ],
+        "paths": {
+            "jszip": [ "../node_modules/jszip/dist/jszip.min.js" ]
+        }
     }
 }
