--- a/package.json
+++ b/package.json
@@ -9,36 +9,36 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^6.1.0",
-        "@angular/common": "^6.1.0",
-        "@angular/compiler": "^6.1.0",
-        "@angular/core": "^6.1.0",
-        "@angular/forms": "^6.1.0",
-        "@angular/http": "^6.1.0",
-        "@angular/platform-browser": "^6.1.0",
-        "@angular/platform-browser-dynamic": "^6.1.0",
-        "@angular/router": "^6.1.0",
+        "@angular/animations": "^8.2.0",
+        "@angular/cdk": "^8.0.0",
+        "@angular/common": "^8.2.0",
+        "@angular/compiler": "^8.2.0",
+        "@angular/core": "^8.2.0",
+        "@angular/forms": "^8.2.0",
+        "@angular/platform-browser": "^8.2.0",
+        "@angular/platform-browser-dynamic": "^8.2.0",
+        "@angular/router": "^8.2.0",
         "color": "^3.0.0",
         "core-js": "^2.5.4",
-        "devextreme": "~18.2.3",
-        "devextreme-angular": "~18.2.3",
+        "devextreme": "~19.2.4",
+        "devextreme-angular": "~19.2.4",
         "rxjs": "~6.2.0",
         "rxjs-compat": "^6.3.3",
-        "zone.js": "~0.8.26"
+        "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.8.0",
-        "@angular/cli": "~6.2.4",
-        "@angular/compiler-cli": "^6.1.0",
-        "@angular/language-service": "^6.1.0",
+        "@angular-devkit/build-angular": "~0.803.0",
+        "@angular/cli": "~8.3.19",
+        "@angular/compiler-cli": "^8.2.0",
+        "@angular/language-service": "^8.2.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
-        "codelyzer": "~4.3.0",
+        "codelyzer": "~5.0.0",
         "node-sass": "^4.5.3",
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
-        "typescript": "~2.9.2"
+        "typescript": "~3.4.0"
     }
 }
